[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/UI/MissionUpdatePopupController.gd" type="Script" id=1]
[ext_resource path="res://Resources/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://Resources/Audio/Sfx/zapsplat_cartoon_musical_accent_xylophone_dual_tone_ascend_50537.wav" type="AudioStream" id=3]
[ext_resource path="res://Resources/Audio/Sfx/zapsplat_cartoon_rise_climb_ascend_magical_discordant_002_42846.wav" type="AudioStream" id=4]

[node name="NewMissionPopup" type="PopupPanel"]
margin_left = 417.0
margin_top = 253.0
margin_right = 639.0
margin_bottom = 333.0
theme = ExtResource( 2 )
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.0
margin_top = -32.0
margin_right = 103.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewMissionLabel" type="Label" parent="VSplitContainer"]
visible = false
margin_right = 206.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.643137, 0.643137, 0.643137, 1 )
text = "New Mission Started"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompleteMissionLabel" type="Label" parent="VSplitContainer"]
visible = false
margin_top = 38.0
margin_right = 206.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.129412, 0.705882, 0.0470588, 1 )
custom_colors/font_outline_modulate = Color( 0.054902, 0.301961, 0.313726, 1 )
custom_colors/font_color_shadow = Color( 0.101961, 0.45098, 0.529412, 1 )
text = "Mission Complete!"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="MissionTitle" type="Label" parent="VSplitContainer"]
margin_top = 19.0
margin_right = 206.0
margin_bottom = 45.0
text = "\"Mission Title\""
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.333
one_shot = true

[node name="NewAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX Main"

[node name="CompleteAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX Main"
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
